[workspace]
members = ["examples/vello_example"]
resolver = "3"

[package]
name = "tinyvg-rs"
version = "0.0.2"
edition = "2024"
description = "A low-level library for parsing binary TinyVG files into Rust data structures."
license-file = "LICENSE"
homepage = "https://github.com/craft-gui/tinyvg-rs"
repository = "https://github.com/craft-gui/tinyvg-rs"

exclude = [
    "examples/app-icon.tvg",
    "examples/chart.tvg",
    "examples/tiger.tvg",
    "images/vello_example.gif"
]

[dependencies]
byteorder = "1.5.0"
usvg = { version = "0.45.1", features = ["default"], optional = true }

[features]
default = []
svg-to-tvg = ["dep:usvg"]